--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Tic Tac Toe</title>
 </head>
 
@@ -31,11 +34,11 @@
         </div>
         <div class="play-section">
             <section>
-                <span class="box1">O</span>
-                <span class="box2">X</span>
+                <span class="box1"></span>
+                <span class="box2"></span>
                 <span class="box3"></span>
             </section>
-        
+
             <section>
                 <span class="box4"></span>
                 <span class="box5"></span>
