Showing Result section when anyone wins

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="result hide">
         <h1>Player <span class="winner">X</span> Won the Game!</h1>
-        <button>Replay</button>
+        <button onclick="replayBtn()">Replay</button>
     </div>
 
     <script src="app.js"></script>
