--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="result hide">
-        <h1>Player <span class="winner">X</span> Won the Game!</h1>
+        <h1 class="winner-h1">Player <span class="winner">X</span> Won the Game!</h1>
         <button onclick="replayBtn()">Replay</button>
     </div>
 
